[gd_scene load_steps=4 format=3 uid="uid://bt0sfajn3i7tr"]

[ext_resource type="Script" uid="uid://lunxp3tn8g08" path="res://scripts/card_object.gd" id="1_xkj05"]
[ext_resource type="Texture2D" uid="uid://hq6jt60uv07o" path="res://resources/images/floppy_disk.png" id="2_xkj05"]
[ext_resource type="PackedScene" uid="uid://ioadxkqkiabq" path="res://scenes/objects_components/drag_and_drop_2d.tscn" id="3_qlpjb"]

[node name="CardObject" type="Button"]
offset_right = 194.0
offset_bottom = 205.0
pivot_offset = Vector2(97, 102.5)
focus_mode = 0
mouse_filter = 1
flat = true
script = ExtResource("1_xkj05")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_xkj05")
expand_mode = 1
stretch_mode = 4

[node name="DragAndDrop2D" parent="." node_paths=PackedStringArray("dragged_object") instance=ExtResource("3_qlpjb")]
dragged_object = NodePath("..")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="dragged" from="DragAndDrop2D" to="." method="_on_drag_and_drop_2d_dragged"]
[connection signal="dropped" from="DragAndDrop2D" to="." method="_on_drag_and_drop_2d_dropped"]
